[gd_scene load_steps=3 format=3 uid="uid://cmls2m04kqtfb"]

[ext_resource type="Script" path="res://2_MVC_WAB/UI/My_Accountt/My_Account_Load/My_Account_Load.gd" id="1_qkie6"]
[ext_resource type="Texture2D" uid="uid://b72s4g633sf5x" path="res://9_My_assets/1_assats/A_60.bmp" id="2_8h1fy"]

[node name="My_Account_Load" type="Node2D"]
script = ExtResource("1_qkie6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(51, 66)
scale = Vector2(0.243636, 0.224949)
texture = ExtResource("2_8h1fy")
centered = false

[node name="Label" type="Label" parent="."]
offset_left = 243.0
offset_top = 189.0
offset_right = 337.0
offset_bottom = 247.0
text = "تلفون"
horizontal_alignment = 1
vertical_alignment = 1

[node name="i_name" type="Label" parent="."]
offset_left = 35.0
offset_top = 185.0
offset_right = 246.0
offset_bottom = 243.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="i_gmail" type="Label" parent="."]
offset_left = 35.0
offset_top = 259.0
offset_right = 246.0
offset_bottom = 317.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="i_upzar" type="Label" parent="."]
offset_left = 32.0
offset_top = 329.0
offset_right = 243.0
offset_bottom = 387.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 246.0
offset_top = 255.0
offset_right = 340.0
offset_bottom = 313.0
text = "ایمیل"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 245.0
offset_top = 334.0
offset_right = 339.0
offset_bottom = 392.0
text = "نام کاربری"
horizontal_alignment = 1
vertical_alignment = 1
